hphp/hack/test/typecheck/abstract_typeconsts/skip_one.php.exp
File "skip_one.php", line 8, characters 7-7:
This class must be declared abstract, or provide an implementation for the abstract type constant 'T' (Typing[4047])
File "skip_one.php", line 5, characters 23-23:
Declaration is here
